added cache and .pyc files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 ProjectPlan.txt
-__pycache__/
 .idea/
 scraping/
+__pycache__/
 .pytest_cache/
 tests/_pycache__
 tests/.pytest_cache
+tests/__init__.pyc
+src/__init__.pyc
+src/__pycache__/
+src/scraper/__pycache__/
+src/scraper/__init__.pyc
+src/scraper/player_info.pyc
